--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/g46_todo_db?createDatabaseIf
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = 1234
 
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle= true
